profilelist1exp/unpackaged/objects/Opportunity_Tracker__c.object
<CustomObject>
    <description>234106 - AppAssure Phase III 
Track Opportunity fields</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Tracker</relationshipLabel>
        <relationshipName>Opportunity_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AppAssure_Opportunity_GUID__c</fullName>
        <externalId>true</externalId>
        <label>AppAssure Opportunity GUID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunity Tracker</relationshipLabel>
        <relationshipName>Opportunity_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DFS_Probability__c</fullName>
        <formula>CASE( DFS_Stage__c , &quot;Plan - 1%&quot;, 0.01, &quot;Discover - 10%&quot;, 0.1, &quot;Qualify - 30%&quot;, 0.3, &quot;Propose - 60%&quot;, 0.6, &quot;Commit - 90%&quot;, 0.9, &quot;Win - 100%&quot;, 1, &quot;Lost, Cancelled - 0%&quot;, 0, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DFS_Probability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DFS_Stage__c</fullName>
        <label>DFS - Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan - 1%</fullName>
                </value>
                <value>
                    <fullName>Discover - 10%</fullName>
                </value>
                <value>
                    <fullName>Qualify - 30%</fullName>
                </value>
                <value>
                    <fullName>Propose - 60%</fullName>
                </value>
                <value>
                    <fullName>Commit - 90%</fullName>
                </value>
                <value>
                    <fullName>Win - 100%</fullName>
                </value>
                <value>
                    <fullName>Lost, Cancelled - 0%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Expiration_Timeframe__c</fullName>
        <label>Deal Expiration (Days)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>180</fullName>
                </value>
                <value>
                    <fullName>1000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Deal ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fiscal_Book_Date__c</fullName>
        <label>Fiscal Book Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Opportunity Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Next_Steps_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Next Steps Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Email__c</fullName>
        <label>Opportunity Owner Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Name__c</fullName>
        <label>Opportunity Owner Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overlay_Solution_Type__c</fullName>
        <label>Overlay Solution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliates</fullName>
                </value>
                <value>
                    <fullName>Alliances</fullName>
                </value>
                <value>
                    <fullName>APOS</fullName>
                </value>
                <value>
                    <fullName>Business Phone Systems</fullName>
                </value>
                <value>
                    <fullName>CFI</fullName>
                </value>
                <value>
                    <fullName>Data Center Solutions</fullName>
                </value>
                <value>
                    <fullName>EPP</fullName>
                </value>
                <value>
                    <fullName>Imaging</fullName>
                </value>
                <value>
                    <fullName>ISG</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>S&amp;P</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Opportunity_Stage__c</fullName>
        <label>Partner Opportunity Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan - 1%</fullName>
                </value>
                <value>
                    <fullName>Discover - 10%</fullName>
                </value>
                <value>
                    <fullName>Qualify - 30%</fullName>
                </value>
                <value>
                    <fullName>Propose - 60%</fullName>
                </value>
                <value>
                    <fullName>Commit - 90%</fullName>
                </value>
                <value>
                    <fullName>Win - 100%</fullName>
                </value>
                <value>
                    <fullName>Lost, Cancelled - 0%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Product_Delivery_Address_Country__c</fullName>
        <label>Primary Product Delivery Address Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Primary_Product_Delivery_Address_Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ÅLAND ISLANDS</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
                <value>
                    <fullName>BOUVET ISLAND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Product_Delivery_Address_Region__c</fullName>
        <label>Primary Product Delivery Address Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EC-EMEA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>NORTH AMERICA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reason_Won_Lost__c</fullName>
        <label>Reason Won/Lost</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ncumbent</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Pricing / ROI</fullName>
                </value>
                <value>
                    <fullName>Product Features/Technical Solution</fullName>
                </value>
                <value>
                    <fullName>Service /Support/Delivery Capabilities</fullName>
                </value>
                <value>
                    <fullName>Dell Not Bidding</fullName>
                </value>
                <value>
                    <fullName>Customer Cancelled</fullName>
                </value>
                <value>
                    <fullName>Partner Registration of Deal Expired</fullName>
                </value>
                <value>
                    <fullName>Deal Moved from Partner to Direct</fullName>
                </value>
                <value>
                    <fullName>Deal Moved from Direct to Partner</fullName>
                </value>
                <value>
                    <fullName>Duplicate Opportunity</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Renewal Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Manually Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Type__c</fullName>
        <label>Solution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APOS</fullName>
                </value>
                <value>
                    <fullName>Applications</fullName>
                </value>
                <value>
                    <fullName>Business Intelligence</fullName>
                </value>
                <value>
                    <fullName>Business Processing</fullName>
                </value>
                <value>
                    <fullName>Campus</fullName>
                </value>
                <value>
                    <fullName>Client Hardware Only</fullName>
                </value>
                <value>
                    <fullName>Client Hardware w/ Activation</fullName>
                </value>
                <value>
                    <fullName>Cloud Integration</fullName>
                </value>
                <value>
                    <fullName>Compellent</fullName>
                </value>
                <value>
                    <fullName>Consulting Services</fullName>
                </value>
                <value>
                    <fullName>Core Datacenter Applications</fullName>
                </value>
                <value>
                    <fullName>Custom Rack Integration (Integrator)</fullName>
                </value>
                <value>
                    <fullName>Databases</fullName>
                </value>
                <value>
                    <fullName>Data Center/Unified Fabric</fullName>
                </value>
                <value>
                    <fullName>DataCenter Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Data Management Solutions</fullName>
                </value>
                <value>
                    <fullName>End-User/Client Optimization</fullName>
                </value>
                <value>
                    <fullName>End User Computing</fullName>
                </value>
                <value>
                    <fullName>HPCC - High Performance Computing</fullName>
                </value>
                <value>
                    <fullName>IDM (Storage &amp; Intelligent Data Management Solutions)</fullName>
                </value>
                <value>
                    <fullName>IT Simplification</fullName>
                </value>
                <value>
                    <fullName>Managed Services</fullName>
                </value>
                <value>
                    <fullName>Microsoft / Email / Unified Comms / VoIP</fullName>
                </value>
                <value>
                    <fullName>Mobility Applications</fullName>
                </value>
                <value>
                    <fullName>Mobility Expense Management</fullName>
                </value>
                <value>
                    <fullName>Mobility Life Cycle Management</fullName>
                </value>
                <value>
                    <fullName>Mobility Security</fullName>
                </value>
                <value>
                    <fullName>Mobility Solutions</fullName>
                </value>
                <value>
                    <fullName>Networking</fullName>
                </value>
                <value>
                    <fullName>Network Security</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StageName__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan - 1%</fullName>
                </value>
                <value>
                    <fullName>Discover - 10%</fullName>
                </value>
                <value>
                    <fullName>Qualify - 30%</fullName>
                </value>
                <value>
                    <fullName>Propose - 60%</fullName>
                </value>
                <value>
                    <fullName>Commit - 90%</fullName>
                </value>
                <value>
                    <fullName>Win - 100%</fullName>
                </value>
                <value>
                    <fullName>Lost, Cancelled - 0%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalOpportunityQuantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deal/Bid - Direct</fullName>
                </value>
                <value>
                    <fullName>Deal/Bid - Indirect</fullName>
                </value>
                <value>
                    <fullName>Run Rate</fullName>
                </value>
                <value>
                    <fullName>LA/EMEA Only Stock</fullName>
                </value>
                <value>
                    <fullName>EMEA Frame Agreement</fullName>
                </value>
                <value>
                    <fullName>ODM - Fighter Model</fullName>
                </value>
                <value>
                    <fullName>Support Request Only</fullName>
                </value>
                <value>
                    <fullName>Extension</fullName>
                </value>
                <value>
                    <fullName>New Competitive</fullName>
                </value>
                <value>
                    <fullName>New Sole Source</fullName>
                </value>
                <value>
                    <fullName>Re-Compete</fullName>
                </value>
                <value>
                    <fullName>Re-Negotiate</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Task Order</fullName>
                </value>
                <value>
                    <fullName>Try and Buy</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Server__c</fullName>
        <label>Vendor Server</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>DELL</fullName>
                </value>
                <value>
                    <fullName>EMC</fullName>
                </value>
                <value>
                    <fullName>Finders Fee</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>VMWare</fullName>
                </value>
                <value>
                    <fullName>Stratus</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Storage__c</fullName>
        <label>Vendor Storage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>DELL/EMC Black</fullName>
                </value>
                <value>
                    <fullName>DELL/EMC Purple</fullName>
                </value>
                <value>
                    <fullName>Dell-Compellent</fullName>
                </value>
                <value>
                    <fullName>Dell-Equalogic</fullName>
                </value>
                <value>
                    <fullName>EMC</fullName>
                </value>
                <value>
                    <fullName>EMC Data Domain</fullName>
                </value>
                <value>
                    <fullName>Finders Fee</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Opportunity Tracker</label>
    <nameField>
        <label>Opportunity Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>